--- a/util/layout/begin.tex
+++ b/util/layout/begin.tex
@@ -102,6 +102,17 @@
    \vbox{\hrule width.3em}%
    \hbox{\vrule height.3ex}}
 
+% ######################################
+%                  COMMANDS
+% ######################################
+\newcommand*{\codeexamples}[1]{
+	\vspace{0.6em}
+
+	\noindent \verb=\detokenize{#1}
+
+	\vspace{0.6em}
+}
+
 \title{Xử lý ngôn ngữ và tiếng nói}
 
 
