--- a/tex/2.tex
+++ b/tex/2.tex
@@ -452,3 +452,7 @@ I do uh main- mainly business data processing
 Câu nói này có hai loại disfluencies. Từ broken-off main- được gọi là một fragment. Các từ như uh và um được gọi là các filler hay filled paused. Chúng ta coi những từ này là các từ? Một lần nữa, nó phụ thuộc vào loại ứng dụng. Nếu chung ta được xây hệ thống tự động ghi lời thoại, chúng ta có thể muốn bỏ đi các disfluencies.
 
 Nhưng có đôi khi chúng ta sẽ giữ lại các disfluencies. Disfluencies như uh hay um thường hữu ích trong các bài toán dự đoán từ kế tiếp, bởi vì chúng là dấu hiệu của việc người nói sẽ bắt đầu một mệnh đề hoặc đưa ra ý tưởng, nên trong bài toán nhận dạng tiếng nói chúng được gọi là những từ bình thường. Vì những nguowì sử dụng những loại disfluencies có thể là dấu hiệu để xác định người nói. Clark và Fox Tree (2002) chỉ ra rằng uh và um có nghĩa khác nhau. Bạn nghĩ đó là gì?
+
+Liệu những tokens viết hoa như They và các token viết thường như they có cùng một từ? Chúng có chung nghĩa trong một số bài toán (nhận dạng giọng nói), trong khi đối với các bài toán xác định từ loại hay gán nhãn tên thực thể, viết hoa là một đặc trưng hữu ích và được giữ lại.
+
+Vậy còn dạng số nhiều như cats và cat? Hai từ đều có chung lemma là cat nhưng ở dạng khác nhau. Một lemma là một tập hợp các dạng từ có chung stem, cùng từ loại và nghĩa. Dạng từ là một dạng đầy đủ hoặc biến thể của từ. Trong các ngôn ngữ phức tạp như Ả Rập, chúng ta thường phải đối mặt với vấn đề lemmatization. Với nhiều bài toán trong tiếng Anh, wordforms rất hiệu quả.
